@@ -13661,8 +13661,10 @@ public class DefaultScriptingEngine implements ScriptingEngine
 							if(chk)
 							{
 								str="";
-								if((msg.source().session()!=null)&&(msg.source().session().getPreviousCMD()!=null))
-									str=" "+CMParms.combine(msg.source().session().getPreviousCMD(),0).toUpperCase()+" ";
+								final Session S = msg.source().session();
+								if((S!=null)
+								&&(S.getHistory().size()>0))
+									str=" "+CMParms.combine(S.getHistory().getLast(),0).toUpperCase()+" ";
 								if((t[2].length()==0)||(t[2].equals("ALL")))
 									tryIt=true;
 								else
@@ -14307,8 +14309,10 @@ public class DefaultScriptingEngine implements ScriptingEngine
 							if(chk)
 							{
 								String str="";
-								if((msg.source().session()!=null)&&(msg.source().session().getPreviousCMD()!=null))
-									str=" "+CMParms.combine(msg.source().session().getPreviousCMD(),0).toUpperCase()+" ";
+								final Session S = msg.source().session();
+								if((S!=null)
+								&&(S.getHistory().size()>0))
+									str=" "+CMParms.combine(S.getHistory().getLast(),0).toUpperCase()+" ";
 								boolean doIt=false;
 								if((t[2].length()==0)||(t[2].equals("ALL")))
 									doIt=true;
