@@ -1,10 +1,13 @@
 !=EXCLAMATION_POINT
 EXCLAMATION_POINT=\
 Command : !\n\r\
-Usage   : !\n\r\
+Usage   : !([MATCH STRING])\n\r\
 Example : !\n\r\
+Example : !(loo)\n\r\
 Short(s): \n\r\
-Repeats the last command you entered.
+Repeats the last command you entered, or the last one that \
+matches the given string.  Use HISTORY to see the list of \
+previously entered commands.
 
 ABILITIES=\
 Command : ABILITIES\n\r\
@@ -1562,7 +1565,8 @@ Command : HISTORY\n\r\
 Usage   : HISTORY ([NUMBER])\n\r\
 Example : history\n\r\
 Short(s): \n\r\
-Shows you a list of your previously entered commands, starting with the most recent.
+Shows you a list of your previously entered commands, starting with the \
+most recent.  Use the ! command to redo them.
 
 HOLD=\
 Command : HOLD\n\r\
